--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
     text-align: center;
     padding: 16px;
     margin-bottom: 16px;
+    width: 327px;
 }
 .ratings-box h3 {
     font-size: 13px;
@@ -68,6 +69,7 @@ body {
     border-radius: 8px;
     padding: 40px 32px 32px;
     margin-bottom: 16px;
+    width: 327px;
 }
 .testimonial-biog {
     display: flex;
@@ -100,4 +102,70 @@ body {
 /* ATTRIBUTION */
 .attribution {
   margin-top: 60px;
+}
+
+
+/* DESKTOP */
+@media (min-width: 1024px) {
+  body {
+    width: 1440px;
+    padding-top: 0px;
+  }
+  .header-grid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    width: 1100px;
+    height: 235px;
+    margin: 127px auto;
+  }
+  .intro {
+    width: 445px;
+    height: 235px;
+  }
+  .intro-head {
+    font-size: 48px;
+    line-height: 48px;
+    letter-spacing: -1.71px;
+    text-align: left;
+  }
+  .intro-text {
+    font-size: 15px;
+    line-height: 25px;
+    text-align: left;
+  }
+  .ratings {
+    height: 200px;
+    align-self: center;
+  }
+   .ratings-box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 445px;
+    height: 56px;
+    padding-left: 0;
+  }
+  .rb-2 {
+    margin-left: 48px;
+  }
+  .rb-3 {
+    margin-left: 95px;
+  }
+  .ratings-score {
+    margin-top: 0px;
+    margin-left: 32px;
+    margin-right: 32px;
+    margin-bottom: 0;
+  }
+  .testimonials {
+    width: 1100px;
+    display: flex;
+    margin: auto;
+  }
+  .testimonial-box {
+    width: 350px;
+  }
+  .tb-1, .tb-2 {
+    margin-right: 30px;
+  }
 }
